# positive_ev_project

./: .gitignore  README.md  fetching datagolf api - WORKS!!!!.txt  requirements.txt
Positive_EV_Repo/: LICENSE  Makefile  README.md  pyproject.toml
Positive_EV_Repo/EV/: __init__.py  dataset.py  features.py  plots.py
Positive_EV_Repo/EV/modeling/: predict.py  train.py
data/processed/: model_data_clean.csv
figures/: summary_statistics.csv
notebooks/: 01_Cleaning.ipynb  01_DataCleaning.ipynb  02_EDA.ipynb
src/Positive_EV_Repo/data/: datagolfapi.py  devig_utils.py  fetch_datagolf.py  testapi.py
