[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "EV"
version = "0.0.1"
description = "A machine learning pipeline for detecting and predicting positive expected value (EV) bets across sportsbooks."
authors = [
  { name = "raiv300" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = "~=3.12.0"


[tool.ruff]
line-length = 99
src = ["EV"]
include = ["pyproject.toml", "EV/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["EV"]
force-sort-within-sections = true

